--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Garvetur Luxury Porto — Mapa v4.3</title>
+  <title>Garvetur Luxury Porto — Mapa v4.4</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
-    :root { --panel:#ffffff; --shadow:0 6px 24px rgba(0,0,0,.12); --radius:12px; --brand:#bfa06a; --dark:#111; }
+    :root { --panel:rgba(255,255,255,0.78); --panelHover:rgba(255,255,255,0.92); --shadow:0 6px 24px rgba(0,0,0,.12); --radius:12px; --brand:#bfa06a; --dark:#111; }
     html, body { height:100%; margin:0; background:#f5efe6 }
     #map { position:absolute; inset:0; height:100%; width:100%; }
-    .controls { position:absolute; top:12px; left:12px; z-index:1000; background:var(--panel); padding:12px; border-radius:var(--radius); box-shadow:var(--shadow); font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial; max-width:700px; border:1px solid #eee }
+    .controls {
+      position:absolute; top:12px; left:12px; z-index:1000;
+      background:var(--panel); border:1px solid #ddd; border-radius:var(--radius);
+      box-shadow:var(--shadow); padding:12px;
+      font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      max-width:700px; backdrop-filter: blur(6px);
+      transition: background .15s ease;
+    }
+    .controls:hover { background: var(--panelHover); }
     .controls strong { color:var(--dark) }
     .controls label { display:block; font-size:12px; margin-top:8px }
-    .controls input, .controls select, .controls textarea { width:100%; padding:6px 8px; border:1px solid #ddd; border-radius:8px; font-size:12px }
+    .controls input, .controls select, .controls textarea { width:100%; padding:6px 8px; border:1px solid #ddd; border-radius:8px; font-size:12px; background:rgba(255,255,255,0.9) }
     .controls button { margin-top:8px; padding:8px 10px; border:0; border-radius:10px; cursor:pointer; background:#111; color:#fff }
     .toolbar { position:absolute; right:12px; top:12px; z-index:1000; display:flex; gap:8px; flex-wrap:wrap }
-    .toolbar button { background:#fff; border:1px solid #eee; border-radius:10px; padding:8px 10px; box-shadow:0 6px 24px rgba(0,0,0,.12); cursor:pointer }
-    .legend { position:absolute; right:12px; bottom:12px; z-index:1000; background:#fff; border:1px solid #eee; border-radius:12px; box-shadow:0 6px 24px rgba(0,0,0,.12); padding:10px; font-family:system-ui; font-size:12px }
+    .toolbar button { background:rgba(255,255,255,0.85); border:1px solid #eee; border-radius:10px; padding:8px 10px; box-shadow:0 6px 24px rgba(0,0,0,.12); cursor:pointer; backdrop-filter: blur(4px) }
+    .legend { position:absolute; right:12px; bottom:12px; z-index:1000; background:rgba(255,255,255,0.85); border:1px solid #eee; border-radius:12px; box-shadow:0 6px 24px rgba(0,0,0,.12); padding:10px; font-family:system-ui; font-size:12px; backdrop-filter: blur(4px) }
     .chip { display:inline-flex; align-items:center; gap:6px; border:1px solid #eee; border-radius:999px; padding:4px 8px; margin-right:6px; background:#fff; cursor:pointer; user-select:none }
     .chip input { margin-right:6px }
     .dot { width:10px; height:10px; border-radius:50% }
@@ -115,7 +123,7 @@
       if(k==null) return '';
       return k.toString().toLowerCase()
         .normalize('NFD').replace(/[\u0300-\u036f]/g,'')
-        .replace(/[^a-z0-9]+/g,''); // remove espaços e pontuação
+        .replace(/[^a-z0-9]+/g,''); // remove espaços/pontuação
     }
     function extractYear(v){
       if(v==null) return null;
@@ -279,7 +287,6 @@
         else { field+=c; } }
       if(field!==''||row.length){ row.push(field); rows.push(row); }
       const headers = rows.shift() || [];
-      // Map normalizado
       const normIdx = new Map(headers.map((h,i)=>[normalizeKey(h), i]));
       function gi(keys){ for(const k of keys){ const nk=normalizeKey(k); if(normIdx.has(nk)) return normIdx.get(nk); } return -1; }
       const iName = gi(KEY_ALIASES.name);
@@ -310,12 +317,11 @@
         const ws = workbook.Sheets[sn];
         const json = XLSX.utils.sheet_to_json(ws, {defval:'', raw:false});
         if(!json.length) continue;
-        // construir mapa normalizado de cabeçalhos
         const hdrRaw = Object.keys(json[0]);
         const hdrMap = new Map(hdrRaw.map(h=>[normalizeKey(h), h]));
         const hasLat = KEY_ALIASES.lat.some(k=>hdrMap.has(normalizeKey(k)));
         const hasLng = KEY_ALIASES.lng.some(k=>hdrMap.has(normalizeKey(k)));
-        if(!(hasLat && hasLng)) continue; // ignorar folhas sem coordenadas
+        if(!(hasLat && hasLng)) continue;
         json.forEach(row=>{
           const mapNorm = new Map(Object.keys(row).map(k=>[normalizeKey(k), row[k]]));
           const name = aliasHit(mapNorm,'name') ?? '';
@@ -324,7 +330,6 @@
           const lat = toNum(aliasHit(mapNorm,'lat'));
           const lng = toNum(aliasHit(mapNorm,'lng'));
           const ano = extractYear(aliasHit(mapNorm,'ano'));
-          // extras
           const link = row['Link'] || row['link'] || row['URL'] || row['url'] || '';
           const pdf  = row['TabelaVendas'] || row['tabelavendas'] || row['PDF'] || row['pdf'] || '';
           if(!isNaN(lat) && !isNaN(lng)) out.push({name,notes,status,lat,lng,ano,link,pdf});
